<resources>
    <string name="app_name">GETs</string>
    <string name="title_home">Home</string>
    <string name="title_closet">Closet</string>
    <string name="title_product">Product</string>
    <string name="title_magazine">Magazine</string>
    <string name="home_custom_recommendation"># Recommendation</string>
    <string name="style_minimal">Minimal</string>
    <string name="style_casual">Casual</string>
    <string name="style_campus">Campus</string>
    <string name="style_rock_chic">Rock chic</string>
    <string name="style_street">Street</string>
    <string name="style_amekaji">Amekaji</string>
    <string name="style_office">Office</string>
    <string name="style_city_boy">City boy</string>
    <string name="style_feminine">Feminine</string>
    <string name="style_lovely">Lovely</string>
    <string name="style_sexy_glam">Sexy glam</string>
    <string name="hint_title" translatable="false"># Title</string>
    <string name="home_style_guide"># Find my style</string>
    <string name="button_more">More</string>
    <string name="home_style_view"># View style</string>
    <string name="login_id_field">Email</string>
    <string name="login_pw_field">Password</string>
    <string name="button_signin">Sign in</string>
    <string name="login_find_id">Find ID</string>
    <string name="login_find_pw">Find PW</string>
    <string name="button_signup">Sign up</string>
    <string name="msg_server_error">The connection with the server is not smooth.</string>
    <string name="msg_signin_error">The information you entered does not match.</string>
    <string name="home_top_trends" translatable="false"># Top trends</string>
    <string name="hint_price" translatable="false">12,300</string>
    <string name="hint_favorite" translatable="false">23</string>
    <string name="button_kakao_signin">Sign in with kakao</string>
    <string name="hint_name_star">*Name</string>
    <string name="hint_email_star">*Email</string>
    <string name="hint_password_star">*PW</string>
    <string name="hint_password_check_star">*PW Check</string>
    <string name="hint_phone_star">*Phone</string>
    <string name="hint_birth_star">*Birth</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_check">Password Check</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_birth">Birth</string>
    <string name="hint_address">Address</string>
    <string name="hint_address_detail">Address detail</string>
    <string name="msg_password_error">Passwords don\'t match</string>
    <string name="msg_password_length_error">Passwords are too short</string>
    <string name="msg_required_field_error">*Required</string>
    <string name="msg_email_format_error">Email format is incorrect</string>
    <string name="hint_year">Year*</string>
    <string name="hint_month">Month*</string>
    <string name="hint_day">Date*</string>
    <string name="msg_signup_error">Please check your input again</string>
    <string name="msg_catch_phrase" translatable="false">Guess style,\nGet style</string>
    <string name="button_start">Start</string>
    <string name="login_or" translatable="false">OR</string>
    <string name="hint_time" translatable="false">2:59</string>
    <string name="button_send">Send</string>
    <string name="button_ok">OK</string>
    <string name="msg_term_all">Agree to all terms and conditions</string>
    <string name="msg_term_required">(Required)  Gets Terms of Service</string>
    <string name="msg_term_info">(Required) Information Collection and Usage</string>
    <string name="msg_term_marketing">(Optional) Event and marketing recieve</string>
    <string name="msg_password_condition">8 or more letters and numbers</string>
    <string name="button_resend">Resend</string>
    <string name="msg_phone_check_error">Can\'t send message</string>
    <string name="msg_phone_check_failed">Failed to check phone number</string>
    <string name="msg_phone_check_success">Phone number verification successful</string>
    <string name="hint_phone_check">Certification Number</string>
    <string name="button_done">Done</string>
    <string name="msg_phone_format_error">Phone format is incorrect</string>
    <string name="msg_term_error">You did not agree to the mandatory terms and conditions.</string>
    <string name="msg_signin_duplicate">Already registered email</string>
    <string name="msg_email_check_error">Check email first</string>
    <string name="msg_email_check_progress">Checking email ...</string>
    <string name="category_top">Top</string>
    <string name="category_pants">Pants</string>
    <string name="category_outer">Outer</string>
    <string name="category_shoes">Shoes</string>
    <string name="category_skirt">Skirt</string>
    <string name="category_set">Set</string>
    <string name="category_bag">Bag</string>
    <string name="category_hat">Hat</string>
    <string name="category_outer_coat">Coat</string>
    <string name="category_outer_padded_jacket">Padded jacket</string>
    <string name="category_outer_cardigan">Cardigan</string>
    <string name="category_outer_blazer">Blazer</string>
    <string name="category_outer_jumper">Jumper</string>
    <string name="category_outer_jacket">Jacket</string>
    <string name="category_outer_hooded_zipup">Hooded zipup</string>
    <string name="category_outer_fleece">Fleece</string>
    <string name="category_top_t_shirt">T-shirt</string>
    <string name="category_top_shirt_blouse">Shirt/Blouse</string>
    <string name="category_top_long_sleeve">Long sleeve</string>
    <string name="category_top_sweatshirt">Sweatshirt</string>
    <string name="category_top_hoodie">Hoodie</string>
    <string name="category_top_knit">Knit</string>
    <string name="category_top_sleeveless">Sleeveless</string>
    <string name="category_top_vest">Vest</string>
    <string name="category_pants_jeans">Jeans</string>
    <string name="category_pants_slacks">Slacks</string>
    <string name="category_pants_cotton_pants">Cotton pants</string>
    <string name="category_pants_training_pants">Training pants</string>
    <string name="category_pants_jogger_pants">Jogger pants</string>
    <string name="category_pants_shorts">Shorts</string>
    <string name="category_pants_leggings">Leggings</string>
    <string name="category_skirt_mini_skirt">Mini-skirt</string>
    <string name="category_skirt_middle_skirt">Middle_skirt</string>
    <string name="category_skirt_long_skirt">Long_skirt</string>
    <string name="category_set_one_piece">One piece</string>
    <string name="category_set_two_piece">Two piece</string>
    <string name="category_set_suit">Suit</string>
    <string name="category_set_jump_suit">Jump suit</string>
    <string name="category_shoes_sneakers">Sneakers</string>
    <string name="category_shoes_loafers">Loafers</string>
    <string name="category_shoes_boots">Boots</string>
    <string name="category_shoes_derby">Derby</string>
    <string name="category_shoes_heels_pumps">Heels/Pumps</string>
    <string name="category_shoes_sandals">Sandals</string>
    <string name="category_shoes_slipper">Slipper</string>
    <string name="category_bag_backpack">Backpack</string>
    <string name="category_bag_messenger_cross">Messenger/cross bag</string>
    <string name="category_bag_tote">Tote bag</string>
    <string name="category_bag_eco">Eco bag</string>
    <string name="category_bag_leather">Leather bag</string>
    <string name="category_hat_cap">Cap</string>
    <string name="category_hat_beanie">Beanie</string>
    <string name="category_hat_bucket_hat">Bucket hat</string>
    <string name="category_hat_beret">Beret</string>
    <string name="fit_regular">Regular fit</string>
    <string name="fit_over">Over fit</string>
    <string name="fit_wide">Wide</string>
    <string name="fit_semi_wide">Semi wide</string>
    <string name="fit_straight">Straight</string>
    <string name="fit_slim">Slim</string>
    <string name="fit_tapered">Tapered</string>
    <string name="fit_bootcut">Bootcut</string>
    <string name="material_denim">Denim</string>
    <string name="material_cotton">Cotton</string>
    <string name="material_leather">Leather</string>
    <string name="material_linen">Linen</string>
    <string name="material_silk">Silk</string>
    <string name="material_velvet">Velvet</string>
    <string name="material_coduroy">Coduroy</string>
    <string name="material_suede">Suede</string>
    <string name="material_polyester">Polyester</string>
    <string name="material_nylon">Nylon</string>
    <string name="color_black">Black</string>
    <string name="color_white">White</string>
    <string name="color_charcoal">Charcoal</string>
    <string name="color_gray">Gray</string>
    <string name="color_ivory">Ivory</string>
    <string name="color_beige">Beige</string>
    <string name="color_brown">Brown</string>
    <string name="color_red">Red</string>
    <string name="color_pink">Pink</string>
    <string name="color_orange">Orange</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_mustard">Mustard</string>
    <string name="color_mint">Mint</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_sky_blue">Sky blue</string>
    <string name="color_navy">Navy</string>
    <string name="color_purple">Purple</string>
    <string name="color_burgundy">Burgundy</string>
    <string name="color_khakii">Khaki</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="size_xs" translatable="false">XS</string>
    <string name="size_s" translatable="false">S</string>
    <string name="size_m" translatable="false">M</string>
    <string name="size_l" translatable="false">L</string>
    <string name="size_xl" translatable="false">XL</string>
    <string name="age_10">10s</string>
    <string name="age_20">20s</string>
    <string name="age_30">30s</string>
    <string name="age_40">40s</string>
    <string name="age_50">50s</string>
    <string name="age_60_over">60s or older</string>
    <string name="season_spring">Spring</string>
    <string name="season_summer">Summer</string>
    <string name="season_fall">Fall</string>
    <string name="season_winter">Winter</string>
    <string name="hint_outfit">outfits</string>
    <string name="hint_style_question_prefix">:What is \'</string>
    <string name="hint_style_question_postfix">style?\'</string>
    <string name="button_detail">Detail</string>
    <string name="msg_terms_and_privacy"><u>Terms and Privacy</u></string>
    <string name="button_accept">Accept</string>
    <string name="button_deny">Deny</string>
    <string name="tilte_term_required">Terms</string>
    <string name="title_term_info">Infomation collection and use</string>
    <string name="title_term_marketing">Receive event and marketing</string>
    <string name="msg_offline_error">You are offline</string>
    <string name="title_account">Account</string>
    <string name="msg_signout">Sign out</string>
    <string name="msg_info">My info</string>
    <string name="msg_style_analysis">Style analysis</string>
    <string name="msg_feedback">Feedback</string>
    <string name="msg_change_password">Change password</string>
    <string name="title_info">Infomation</string>
    <string name="summary_signout">Sign out and go to sign in page.</string>
    <string name="summary_change_password">Change to a new password</string>
    <string name="summary_my_info">View or change my style information.</string>
    <string name="summary_my_style">Check out my style analysis.</string>
    <string name="hint_new_password_star">*New PW</string>
    <string name="msg_password_now">Enter your current password</string>
    <string name="title_settings">Settings</string>
</resources>