<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:layout="@layout/preference_title_layout"
        app:title="@string/title_settings" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="account_category"
        android:layout="@layout/preference_category_layout"
        app:title="@string/title_account">
        <Preference
            android:layout="@layout/preference_layout"
            app:key="signout"
            app:iconSpaceReserved="false"
            app:title="@string/msg_signout" />


        <Preference
            android:layout="@layout/preference_layout"
            app:key="password"
            app:iconSpaceReserved="false"
            app:title="@string/msg_change_password">
            <intent
                android:targetPackage="com.sys.gets"
                android:targetClass="com.sys.gets.ui.account.PasswordActivity" />
        </Preference>

        <Preference
            android:layout="@layout/preference_layout"
            app:key="info"
            app:iconSpaceReserved="false"
            app:title="@string/msg_info">
            <intent
                android:targetPackage="com.sys.gets"
                android:targetClass="com.sys.gets.ui.account.InfoActivity" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="info_category"
        android:layout="@layout/preference_category_layout"
        app:title="@string/title_info">
        <Preference
            android:layout="@layout/preference_layout"
            app:key="style"
            app:iconSpaceReserved="false"
            app:title="@string/msg_style_analysis" />

        <Preference
            android:layout="@layout/preference_layout"
            app:key="feedback"
            app:iconSpaceReserved="false"
            app:title="@string/msg_feedback" />
    </PreferenceCategory>

</PreferenceScreen>