<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/ic_product_24"
        android:title="@string/title_product" />

    <item
        android:id="@+id/navigation_closet"
        android:icon="@drawable/ic_closet_24"
        android:title="@string/title_closet" />

    <!--    <item-->
    <!--        android:id="@+id/navigation_magazine"-->
    <!--        android:icon="@drawable/ic_magazine_24"-->
    <!--        android:title="@string/title_magazine" />-->

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_24"
        android:title="@string/title_account" />

</menu>