<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign.PasswordActivity">

    <View
        android:id="@+id/text_box"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/signup_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pw_old_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_password_star"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/text_box"
        app:layout_constraintTop_toTopOf="@id/pw_old_field" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pw_old_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/signup_horizontal_margin"
        android:layout_width="0dp"
        android:hint="@string/msg_password_now"
        android:textColor="@color/signInWhite"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:errorTextAppearance="@style/LittleCaption"
        app:layout_constraintStart_toEndOf="@id/text_box"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="56dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pw_new_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_new_password_star"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/text_box"
        app:layout_constraintTop_toTopOf="@id/pw_new_field" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pw_new_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/signup_horizontal_margin"
        android:layout_width="0dp"
        android:hint="@string/msg_password_condition"
        android:textColor="@color/signInWhite"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:errorTextAppearance="@style/LittleCaption"
        app:layout_constraintStart_toEndOf="@id/text_box"
        app:layout_constraintTop_toBottomOf="@id/pw_old_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pw_check_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/signup_horizontal_margin"
        android:hint="@string/hint_password_check"
        android:textColor="@color/signInWhite"
        app:errorTextAppearance="@style/LittleCaption"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@id/text_box"
        app:layout_constraintTop_toBottomOf="@id/pw_new_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/signup_horizontal_margin"
        android:layout_marginVertical="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/msg_change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>